<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggame"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageMap"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_toEndOf="@+id/imageMap"
        android:layout_toRightOf="@+id/imageMap"
        android:contentDescription="@string/flagDes"
        android:src="@drawable/abc_ab_transparent_light_holo" />

    <TextView
        android:id="@+id/endMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageMap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/question"
        android:textColor="#F00000"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/endMessage"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/endMessage"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="141dp"
        android:contentDescription="@string/mapDes"
        android:src="@drawable/abc_ab_transparent_light_holo" />

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:columnWidth="100dp"
        android:horizontalSpacing="5dp"
        android:numColumns="6"
        android:verticalSpacing="5dp" >
    </GridView>

    <Button
        android:id="@+id/btnBackMenu"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/imageMap"
        android:layout_alignStart="@+id/imageMap"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnMenu"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnBackMenu"
        android:layout_alignBottom="@+id/btnBackMenu"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnSkip"
        android:textSize="25sp" />

</RelativeLayout>