<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.worldgeography.MainActivity" >

    <Button
        android:id="@+id/btnNormal"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="370dp"
        android:text="@string/btnNormal"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnCredit"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/btnQuiz"
        android:layout_alignStart="@+id/btnQuiz"
        android:layout_below="@+id/btnQuiz"
        android:layout_marginTop="50dp"
        android:text="@string/credit"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/btnNormal"
        android:layout_alignStart="@+id/btnNormal"
        android:layout_alignTop="@+id/btnNormal"
        android:layout_marginTop="125dp"
        android:text="@string/btnQuiz"
        android:textSize="25sp" />

</RelativeLayout>